--- a/core/templates/pilas/pila_form.html
+++ b/core/templates/pilas/pila_form.html
@@ -75,7 +75,9 @@
     </form>
   </div>
 </div>
-
+<div class="right-column">
+  <img src="{% static 'images/reloj-pagina.png' %}" alt="reloj" class="reloj-img">
+</div>
 <!-- Modal de confirmación simplificado -->
 <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
   aria-hidden="true">
