--- a/core/templates/pilas/pilas_list.html
+++ b/core/templates/pilas/pilas_list.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 <div class="main-content">
+  <div class="header-icons">
+    <h2 class="titulo">PILAS</h2>
+  </div>
+  <br>
   <!-- Header with Add button -->
   <div class="header-icons">
     <a href="{% url 'pilas_form' %}" class="btn btn-add me-3">Agregar Pila</a>
