--- a/core/templates/usuario/usuario_form.html
+++ b/core/templates/usuario/usuario_form.html
@@ -107,7 +107,9 @@
                         <i class="bi bi-lock-fill fs-4 text-secondary"></i>
                     </span>
                     {{ form.password1 }}
-                    <i class="toggle-password bi bi-eye" id="togglePassword"></i>
+                    <span>
+                        <i class="fa-solid fa-eye toggle-password" data-target="id_confirmacion_contraseña"></i>
+                    </span>
                 </div>
 
 
@@ -125,7 +127,9 @@
                         <i class="bi bi-lock-fill fs-4 text-secondary"></i>
                     </span>
                     {{ form.password2 }}
-                    <i class="toggle-password bi bi-eye" id="togglePassword"></i>
+                    <span>
+                        <i class="fa-solid fa-eye toggle-password" data-target="id_confirmacion_contraseña"></i>
+                    </span>
                 </div>
 
 
@@ -425,12 +429,12 @@
                 const type = password2Field.getAttribute('type') === 'password' ? 'text' : 'password';
                 password2Field.setAttribute('type', type);
                 
-                if (this.classList.contains('bi-eye')) {
-                    this.classList.remove('bi-eye');
-                    this.classList.add('bi-eye-slash');
+                if (this.classList.contains('fa-eye')) {
+                    this.classList.remove('fa-eye');
+                    this.classList.add('fa-eye-slash');
                 } else {
-                    this.classList.remove('bi-eye-slash');
-                    this.classList.add('bi-eye');
+                    this.classList.remove('fa-eye-slash');
+                    this.classList.add('fa-eye');
                 }
             });
         }
