--- a/core/templates/pilas/pilas_list.html
+++ b/core/templates/pilas/pilas_list.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 <div class="main-content">
+  <div class="header-icons">
+    <h2 class="titulo">PILAS</h2>
+  </div>
+  <br>
   <!-- Header with Add button -->
   <div class="header-icons">
     <a href="{% url 'pilas_form' %}" class="btn btn-add me-3">Agregar Pila</a>
@@ -28,7 +32,7 @@
           <td>${{ pila.precio }}</td>
           <td>{{ pila.cantidad }}</td>
           <td>
-            <a href="" class="btn btn-sm btn-outline-primary" title="Editar pila">
+            <a href="{% url 'pila_editar' id=pila.id %}" class="btn btn-sm btn-outline-primary" title="Editar pila">
               <i class="bi bi-pencil-square"></i>
             </a>
           </td>
