--- a/core/templates/usuario-productos.html
+++ b/core/templates/usuario-productos.html
@@ -6,17 +6,18 @@
 {% block content %}
 <div class="productos-container mt-5">
     <h2 class="titulo text-center mb-4">Ventas</h2>
-    <div class="row justify-content-center">
-        <div class="col-12 d-flex flex-wrap gap-3 justify-content-center">
+    <div class="row justify-content-center mt-5">
+        <div class="col-12 d-flex flex-wrap gap-5 justify-content-center">
 
-        <a href="#" class="text-decoration-none text-dark">  
+        <a href="{% url 'reloj_list' %}" class="text-decoration-none text-dark">  
             <div class="service-card text-center">
                 <div class="service-icon mx-auto mb-2">
                     <svg viewBox="0 0 24 24" fill="none">
-                        <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        <circle cx="12" cy="12" r="9" stroke="black" stroke-width="2" />
+                        <path d="M12 7V12L15 15" stroke="black" stroke-width="2" stroke-linecap="round" />
                     </svg>
                 </div>
-                <div class="service-title">Relojes</div>
+                <div class="service-title">RELOJES</div>
             </div>
         </a>
 
@@ -41,10 +42,10 @@
 
 <style>
     .service-card {
-        width: 150px;
-        height: 150px;
-        background-color: #dce991;
-        border-radius: 15px;
+        width: 340px;
+        height: 375px;
+        background-color: #D4E484;
+        border-radius: 30px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -75,14 +76,15 @@
     }
 
     .service-icon {
-        width: 50px;
-        height: 50px;
+        width: 200px;
+        height: 200px;
     }
 
     .service-title {
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 50px;
+        font-weight: 600;
         text-transform: uppercase;
+        font-family: 'inter', sans-serif;
     }
 
     @media (max-width: 500px) {
