--- a/core/templates/pilas/pilas_list.html
+++ b/core/templates/pilas/pilas_list.html
@@ -33,7 +33,7 @@
           <td>{{ pila.cantidad }}</td>
           <td>
             <a href="{% url 'pila_editar' id=pila.id %}" class="btn btn-sm btn-outline-primary" title="Editar pila">
-              <i class="bi bi-pencil-square"></i>
+              <i class="bi bi-pencil fs-4"></i>
             </a>
           </td>
         </tr>
