--- a/core/templates/reparacion/reparacion_list.html
+++ b/core/templates/reparacion/reparacion_list.html
@@ -23,98 +23,165 @@
         gap: 0px;
         justify-content: start;
     }
+
+    .filtro-container-reparacion {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .filtro-container-reparacion .form-select {
+        min-width: 120px;
+        border-radius: 4px;
+        border: 1px solid #ced4da;
+        height: 38px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 16px;
+    }
+
+    .text-muted-reparacion {
+        font-weight: bold !important;
+    }
+
+    .report-button-container {
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+    }
+
+    /* Solo para la tabla de reparaciones */
+    .reparaciones-table>:not(caption)>*>* {
+        box-shadow: none !important;
+    }
+    .custom-table-reparacion tbody tr td {
+        white-space: normal;
+    }
+
+    .custom-table tbody tr {
+        height: auto;
+    }
+
+    .main-content {
+        height: auto;
+        min-height: 100%;
+        overflow-y: auto;
+        padding-bottom: 30px; /* Espacio para la paginación */
+    }
+
 </style>
 
-<div class="container">
-    <div class="form-header">
-        <h2 class="titulo titulo_reparacion">Reparaciones</h2>
+<div class="main-content">
+    <div class="header-icons">
+        <h2 class="titulo">REPARACIONES</h2>
     </div>
+    <!-- Botón Agregar reparación -->
+    <div class="header-icons header-icons-reparacion">
+        <a href="{% url 'reparacion_create' %}" class="btn btn-add me-3">Agregar reparación</a>
+        <form method="get" action="{% url 'reparacion_list' %}" class="search-form">
+            <div class="input-group input-group-reparacion" style="gap: 10px;">
+                <input type="text" name="search" class="form-control form-control-reparacion"
+                    placeholder="Buscar reparación" value="{{ request.GET.search }}">
+                <button class="btn btn-search" type="submit">
+                    <i class="bi bi-search text-secondary"></i>
+                </button>
+            </div>
+        </form>
+        <div class="filtro-container-reparacion ms-3">
+            <form method="get" action="{% url 'reparacion_list' %}" id="filtroForm">
+                <!-- Mantener la búsqueda actual si existe -->
+                {% if search %}
+                <input type="hidden" name="search" value="{{ search }}">
+                {% endif %}
 
-    <div class="main-content mt-5">
-        <!-- Botón Agregar reparación -->
-        <div class="header-icons header-icons-reparacion">
-            <a href="{% url 'reparacion_create' %}" class="btn btn-add me-3">Agregar reparación</a>
-            <form method="get" action="{% url 'reparacion_list' %}" class="search-form">
-                <div class="input-group input-group-reparacion" style="gap: 10px;">
-                    <input type="text" name="search" class="form-control form-control-reparacion"
-                        placeholder="Buscar reparación" value="{{ request.GET.search }}">
-                    <button class="btn btn-search" type="submit">
-                        <i class="bi bi-search text-secondary"></i>
-                    </button>
-                </div>
+                <select name="estado" class="form-select form-select-sm" onchange="this.form.submit()">
+                    {% for valor, texto in estados %}
+                    <option value="{{ valor }}" {% if filtro_estado == valor %}selected{% endif %}>
+                        {{ texto }}
+                    </option>
+                    {% endfor %}
+                </select>
             </form>
         </div>
-
-
-
-        <br>
-
-        <!-- Lista de reparaciones -->
-        <div class="table-container">
-            <table class="table table-hover align-middle custom-table">
-                <thead class="table-header">
-                    <tr>
-                        <th>Código</th>
-                        <th>Precio</th>
-                        <th>Fecha de ingreso</th>
-                        <th>Estado</th>
-                        <th>Cliente/Teléfono</th>
-                        <th>Descripción</th>
-                        <th>Fecha estimada</th>
-                        <th>Espacio</th>
-                        <th>Técnico encargado</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for reparacion in reparaciones %}
-                    <tr>
-                        <td>{{ reparacion.codigo_orden }}</td>
-                        <td>${{ reparacion.precio }}</td>
-                        <td>{{ reparacion.fecha_ingreso|date:"d/m/Y" }}</td>
-                        <td>{{ reparacion.estado }}</td>
-                        <td>{{ reparacion.cliente.nombre }} {{ reparacion.cliente.apellido }} - {{
-                            reparacion.cliente.telefono }}</td>
-                        <td>{{ reparacion.descripcion }}</td>
-                        <td>{{ reparacion.fecha_entrega_estimada|date:'d/m/Y' }} </td>
-                        <td>{{ reparacion.espacio_fisico }}</td>
-                        <td>{{ reparacion.tecnico.nombre }} {{ reparacion.tecnico.apellidos }}</td>
-                        <td>
-                            <a href="{% url 'reparacion_edit' reparacion.id %}" class="btn btn-sm btn-outline-primary"
-                                title="Editar reparación">
-                                <i class="bi bi-pencil fs-4"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-
-            <!-- Paginación -->
-            {% if is_paginated %}
-            <nav aria-label="Page navigation">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link"
-                            href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }}{% endif %}">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    {% for num in page_obj.paginator.page_range %}
-                    <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                    </li>
-                    {% endfor %}
-                    <li class="page-item">
-                        <a class="page-link"
-                            href="{% if page_obj.has_next %}?page={{ page_obj.next_page_number }}{% endif %}"
-                            aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            {% endif %}
+        <div class="report-button-container">
+            <a href="#" class="btn btn-add btn-add-empleado me-3"> Generar reporte</a>
         </div>
     </div>
-    {% endblock %}
+
+
+    <br>
+
+    <!-- Lista de reparaciones -->
+    <div class="table-container">
+        <table class="table table-hover align-middle custom-table custom-table-reparacion reparaciones-table">
+            <thead class="table-header">
+                <tr>
+                    <th>Código</th>
+                    <th>Precio</th>
+                    <th>Fecha de ingreso</th>
+                    <th>Estado</th>
+                    <th>Cliente/Teléfono</th>
+                    <th>Descripción</th>
+                    <th>Fecha estimada</th>
+                    <th>Espacio</th>
+                    <th>Técnico encargado</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% if reparaciones %}
+                {% for reparacion in reparaciones %}
+                <tr>
+                    <td>{{ reparacion.codigo_orden }}</td>
+                    <td>${{ reparacion.precio }}</td>
+                    <td>{{ reparacion.fecha_ingreso|date:"d/m/Y" }}</td>
+                    <td>{{ reparacion.estado }}</td>
+                    <td>{{ reparacion.cliente.nombre }} {{ reparacion.cliente.apellido }} - {{ reparacion.cliente.telefono }}</td>
+                    <td>{{ reparacion.descripcion }}</td>
+                    <td>{{ reparacion.fecha_entrega_estimada|date:'d/m/Y' }} </td>
+                    <td>{{ reparacion.espacio_fisico }}</td>
+                    <td>{{ reparacion.tecnico.nombre }} {{ reparacion.tecnico.apellidos }}</td>
+                    <td>
+                        <a href="{% url 'reparacion_edit' reparacion.id %}" class="btn btn-sm btn-outline-primary"
+                            title="Editar reparación">
+                            <i class="bi bi-pencil fs-4"></i>
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr>
+                    <td colspan="10" class="text-center">
+                        <p class="text-muted-reparacion mt-3">No se encontraron reparaciones</p>
+                    </td>
+                </tr>
+                {% endif %}
+            </tbody>
+        </table>
+
+        <!-- Paginación -->
+        {% if is_paginated %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link"
+                        href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }}{% endif %}">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                {% for num in page_obj.paginator.page_range %}
+                <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                    <a class="page-link" href="?page={{ num }}{% if search %}&search={{ search }}{% endif %}{% if filtro_estado %}&estado={{ filtro_estado }}{% endif %}">{{ num }}</a>
+                </li>
+                {% endfor %}
+                <li class="page-item">
+                    <a class="page-link"
+                        href="{% if page_obj.has_next %}?page={{ page_obj.next_page_number }}{% endif %}"
+                        aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
