cambio a español el calendario

--- a/core/templates/reloj/reloj_form.html
+++ b/core/templates/reloj/reloj_form.html
@@ -213,6 +213,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const form = document.getElementById('relojForm');
