--- a/core/templates/usuario/usuario_list.html
+++ b/core/templates/usuario/usuario_list.html
@@ -22,6 +22,7 @@
       </thead>
       <tbody>
         {% for usuario in usuarios %}
+        {% if not usuario.is_superuser %}
         <tr>
           <td style="padding-right: 60%;">
             <i class="bi bi-person fs-4"></i>
@@ -40,8 +41,10 @@
               <i class="bi bi-trash fs-4"></i>
             </a>
         </tr>
+        {% endif %}
         {% endfor %}
-      </tbody>
+    </tbody>
+
     </table>
 
     <!-- Modal de Confirmación de Eliminación -->
