--- a/core/templates/egreso/egreso_form.html
+++ b/core/templates/egreso/egreso_form.html
@@ -10,6 +10,7 @@
         align-items: flex-start;
         width: 100%;
         padding: 20px;
+        background-color: #f7f7f7;
     }
 
     .egreso-container {
@@ -29,7 +30,7 @@
     }
 </style>
 
-<div class="egreso-container bg-#f7f7f7 p-4">
+<div class="egreso-container p-4">
     <div class="text-center mb-4">
         <div style="background-color: #C8DA53; padding: 1rem; border-radius: 25px; display: inline-block;">
             <h2 class="titulo" style="margin: 0; font-family: Montserrat, sans-serif;">EGRESOS DEL DÍA</h2>
@@ -100,6 +101,11 @@
             </button>
             <a href="{% url 'egreso' %}" class="btn cancel">CANCELAR</a>
         </div>
+
+        <div class="mt-3" style="width: 100%;">
+            <a href="{% url 'reporte_egresos_form' %}" class="btn save d-block" style="width: 100%;">GENERAR REPORTE DE EGRESOS</a>
+        </div>
+
     </form>
 </div>
 
@@ -181,7 +187,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 <script>
-document.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('DOMContentLoaded', function () {
         // ===== VARIABLES INICIALES =====
         const fechaValue = "{{ form.fecha.value|date:'d/m/Y' }}";
 
